cut off long messages in log previews, fixes #18

--- a/src/client/components/global.scss
+++ b/src/client/components/global.scss
@@ -166,6 +166,11 @@ a {
   padding-left: 17px;
 }
 
+.log-preview {
+  margin: 0.5em 0;
+  max-height: 1em;
+}
+
 .log-title {
   display: flex;
   justify-content: space-between;
